front-end/src/Components/Header/Header.css
img {
    max-width: 100%;
}

#nav {
    font-family: "Montserrat", sans-serif;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0px 1%;
    background-color: black;
    color: white;
    font-size: 1.5vw;
    width: 100%;
    position: fixed;
    z-index: 3;
}

.logo {
    cursor: pointer;
    padding: 2px;
    width: 6em;
    height: 5em;
}

#btn-mobile {
    display: none;
}

#menu {
    list-style-type: none;
}

#menu li {
    display: inline-block;
    padding: 5vh 4vh 3vh 4vh;
}

#menu li a {
    transition: all 0.3s ease 0s;
    text-decoration: none;
    color: white;
}

#menu li a:hover {
    color: black;
    background-color: white;
    border-radius: 50px;
    padding: 10px;
}

.hamburguer {
    display: none;
}

@media only screen and (max-width: 760px){

    img {
        max-width: 100%;
    }

    #nav {
        font-family: "Montserrat", sans-serif;
        align-items: center;
        justify-content: space-between;
        padding: 6px 1%;
        background-color: black;
        color: white;
        font-size: 100%;
        max-width: 100vw;
        height: 13vh;
    }

    .logo {
        cursor: pointer;
        padding: 2px;
        width: 25vw;
        height: 10vh;
    }

    #menu {
        display: none;
        list-style-type: none;
        position: absolute;
        max-width: 100%;
        top: 96px;
        right: 0px;
        background: rgb(0, 0, 0);
        z-index: 1000;
        transition: 0.6s;
        height: 100vh;
        white-space: nowrap;
    }

    #nav.active #menu {
        display: inline-flex;
        flex-direction: column;
        visibility: visible;
        overflow-y: auto;

    }

    #menu a {
        padding: 1rem 0;
        margin: 0 1rem;
        border-bottom: 2px solid rgba(255, 255, 255, 0.993);
        color: white;
        text-decoration: none;

    }

    #menu li a:hover{
        color: black;
        background-color: white;
        border-radius: 50px;
        padding: 10px;
    }

    .hamburguer {
        display: block;
        cursor: pointer;
        
    }

    .hamburguer .line {
        width: 30px;
        height: 3px;
        background: #fefefe;
        margin: 6px 10px;

    }

}

